src/test/deca/context/invalid/personalTests/FieldDefine.deca
class A{
    int a;
    float a;
}

{
    A a;
    a = new A();
    a.a = 1;
}